# causal-ml-course

./: .buildinfo  .gitignore  Makefile  README.md  Syllabus.md  biblio.bib  evaluation.html  genindex.html  index.html  objects.inv  practical_sessions.html  pyproject.toml  readme.html  search.html  searchindex.js  slides.html  syllabus.html
.doctrees/: environment.pickle  evaluation.doctree  index.doctree  practical_sessions.doctree  readme.doctree  slides.doctree  syllabus.doctree
.github/actions/setup-python-env/: action.yml
.github/workflows/: deploy-docs.yml  main.yml
_sources/: evaluation.rst.txt  index.md.txt  practical_sessions.md.txt  slides.rst.txt  syllabus.rst.txt
_static/slides/: biblio.bib
data/: .gitignore
dev_notebooks/: ihdp_analysis.py  py_panel.py  py_panel_data_example.py  ssm.py
docs/_build/doctrees/: data.doctree  environment.pickle  homeworks.doctree  index.doctree  license.doctree  notebooks.doctree  readme.doctree  syllabus.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  data.html  genindex.html  homeworks.html  index.html  license.html  notebooks.html  objects.inv  readme.html  search.html  searchindex.js  syllabus.html
docs/_build/html/_sources/: homeworks.rst.txt  index.md.txt  syllabus.rst.txt
docs/_build/html/_static/: biblio.bib
docs/source/: cli-usage.md  conf.py  data.md  evaluation.rst  homeworks.rst  index.md  practical_sessions.md  slides.rst  syllabus.rst  usage.md
docs/source/_static/: .gitignore  biblio.bib
mleco/: __init__.py  constants.py  data.py  data_acquisition.py  slides_figures.py
mleco/figures/: 2_linear_regression_non_linear_link.py  2_linear_regression_post_lasso.py  2_linear_regression_regularized.py  2_mse_test_train.py  3_flexible learner.py  3_flexible_models.py  3_flexible_models_cross_validation_nested.py  3_flexible_models_gridsearch.py  3_flexible_models_trees.py  4_event_studies_california.py  4_event_studies_did.py  4_event_studies_ssm.py  5_po_reminder_dag_ddp.py  ensemble_gradient_boosting.py  event_studies_did  event_studies_did_proof.py  style_figs.py  utils.py
notebooks/: 1_dag_introduction.ipynb  1_dag_introduction.py  1_dags_practical_session.py  1_wage_analysis.py  2_lalonde_analysis.py  2_penalized_linear_models_sklearn_intro.py  ML_1_plot_linear_model_coefficient_interpretation.ipynb  ML_1_sklearn_intro.ipynb  README.md  dags_double_ml_pension.ipynb  dags_double_ml_pension.py  dags_practical_session.ipynb  dags_practical_session.py  event_studies_arima.py  event_studies_basque.py  event_studies_germany.py  event_studies_practical_session.ipynb  event_studies_practical_session.py  flexible_models_double_ml_selecting_learner.ipynb  flexible_models_double_ml_selecting_learner.py  flexible_models_practical_session.ipynb  flexible_models_practical_session.py  penalized_linear_models_practical_session.ipynb  penalized_linear_models_practical_session.py  penalized_linear_models_sklearn_intro.ipynb  penalized_linear_models_sklearn_intro.py  s1_identification.py
slides/: 1-intro.typ  1-po_reminder_and_dags.typ  2-estimation strategies.typ  2-machine learning copy.typ  2-penalized_linear_models.typ  2-statistical learning and penalized regression.typ  3-flexible learner.typ  3-flexible_models.typ  4-event studies.typ  4-event_studies.typ  4-synthetic controls.typ  5-advanced topics.typ  biblio.bib  event_studies.typ  flexible_models.typ  penalized_linear_models.typ  po_reminder_and_dags.typ
slides/img/intro/: confounder.drawio
sspcloud/: init-jupyter.sh
