[tool.poetry]
name = "mleco"
version = "0.0.0"
description = "Mleco"
authors = ["Matthieu Doutreligne <matt.dout@gmail.com>"]
license = "EUPL-v1.2"
readme = "README.md"
repository = "https://github.com/straymat/causal-ml-course"
homepage = "https://github.com/straymat/causal-ml-course"
include = ["bin"]
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# [tool.poetry.urls]
# Changelog = "https://github.com/straymat/causal-ml-course/releases"

[tool.poetry.dependencies]
python = "^3.10"

# Project-Specific
numpy = "^2.1.2"
networkx = "^3.4.1"
pgmpy = "^0.1.26"
tabulate = "^0.9.0"
seaborn = "^0.13.2"
matplotlib = "^3.5.1"

[tool.poetry.group.documentation.dependencies]
sphinx = "^8.0.2"
importlib-metadata = "^8.2.0"
myst-parser = "^4.0.0"
pygments = "^2.18.0"
pydata-sphinx-theme = "^0.15.4"
sphinxcontrib-bibtex = "^2.6.1"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.29.0"
jupytext = "^1.13.7"
jupyter = "^1.0.0"
python-dotenv = "^0.20.0"

[tool.poetry.scripts]
cli = "bin.cli:cli"

#################################################################################
# Tooling configs                                                               #
#################################################################################

[tool.cruft]
skip = [
    ".git",
    "README.md",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
