[project]
name = "mleco"
version = "0.0.0"
description = "Mleco"
authors = [{ name = "Matthieu Doutreligne", email = "matthieu.doutreligne@insee.fr" }]
license = { text = "EUPL-v1.2" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy==1.26",
    "networkx>=3.4.1,<4.0.0",
    "pgmpy>=0.1.26,<1.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "seaborn>=0.13.2,<1.0.0",
    "matplotlib>=3.5.1,<4.0.0",
    "pysyncon>=1.5.1,<2.0.0",
    "cvxpy>=1.6.0,<2.0.0",
    "statsmodels>=0.14.4,<1.0.0",
    "skrub>=0.4.1,<1.0.0",
    "pmdarima>=2.0.4,<3.0.0",
    "tfcausalimpact>=0.0.18,<1.0.0",
    "sphinx>=8.0.2,<9.0.0",
    "importlib-metadata>=8.2.0,<9.0.0",
    "myst-parser>=4.0.0,<5.0.0",
    "pygments>=2.18.0,<3.0.0",
    "pydata-sphinx-theme>=0.15.4,<1.0.0",
    "sphinxcontrib-bibtex>=2.6.1,<3.0.0",
    "ipdb>=0.13.13,<1.0.0",
    "ipython>=8.29.0,<9.0.0",
    "jupytext>=1.13.7,<2.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "python-dotenv>=0.20.0,<1.0.0"
]

[project.urls]
repository = "https://github.com/straymat/causal-ml-course"
homepage = "https://github.com/straymat/causal-ml-course"

[project.scripts]
cli = "bin.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
